docs: add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# SvelteKit app
+# SvelteKit
 PUBLIC_APP_NAME=Grow Planner
 ORIGIN=http://localhost:5173
 
-# Database (Drizzle)
-DATABASE_URL=file:./dev.db   # or postgres://user:pass@host:5432/db
+# Database
+DATABASE_URL=file:./dev.db  # or postgres://user:pass@host:5432/db
 
-# Auth / misc
+# Auth / telemetry
 JWT_SECRET=replace-me
 SENTRY_DSN=
