chore: ensure .gitignore excludes builds, envs, and security reports

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@ gitleaks.json
 # security tools & reports
 gitleaks/
 gitleaks.json
+
+# builds & caches
+node_modules/
+.svelte-kit/
+dist/
+build/
+coverage/
+*.log
+
+# env & local
+.env
+.env.*.local
+*.local
+.DS_Store
+.data/
+
+# security tool outputs
+gitleaks/
+gitleaks.json
