--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,23 @@ coverage/
 # security tool outputs
 gitleaks/
 gitleaks.json
+
+# builds & caches
+node_modules/
+.svelte-kit/
+dist/
+build/
+coverage/
+*.log
+
+# env & local
+.env
+.env.*.local
+*.local
+.DS_Store
+.data/
+
+# security tools & reports
+gitleaks/
+gitleaks.json
+trufflehog.json
