feat(dashboard): compact Today + next-actions widget; persist dismissed_at; endpoint/layout fixes; helper scripts

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,16 @@ build/
 # misc
 .DS_Store
 *.off
+# local DB + SQLite junk
+dev.db
+dev_test.db
+*.db-wal
+*.db-shm
+
+# svelte build output
+.svelte-kit/
+
+# editor/backup droppings
+*.bak
+*.bak.*
+src/**/*.bak.*
